# example-hdf5

./: CMakeLists.txt
data/: sample.h5
include/: loader.h
src/: loader.cpp  main.cpp
